Setup for remote hosting

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "rest service for crash report storage",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "andreyn",
   "license": "ISC",
